deployments/networks/testnet/kube/node-cluster/templates/node-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: testnet
  labels:
    network: testnet
  annotations:
    cloud.google.com/backend-config: '{"default": "testnet-ingress-backend-config"}'
spec:
  type: NodePort
  selector:
    network: testnet
    type: fullnode
  ports:
    - protocol: TCP
      port: 26657
      targetPort: rpc
      name: rpc
    - protocol: TCP
      port: 8080
      targetPort: grpc
      name: grpc
