deployments/networks/testnet/kube/node-cluster/templates/ingress-config.yaml
apiVersion: cloud.google.com/v1beta1
kind: BackendConfig
metadata:
  name: testnet-ingress-backend-config
spec:
  timeoutSec: 600
  healthCheck:
    checkIntervalSec: 10
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 5
    port: 1251
    type: HTTP
    requestPath: /
# Ingress (HTTPS load balancer)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet-rpc-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: testnet-rpc-ip
    networking.gke.io/managed-certificates: testnet-rpc-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: testnet-ingress-frontend-config
spec:
  defaultBackend:
    service:
      name: testnet
      port:
        number: 26657
