deployments/networks/testnet/kube/node-cluster/templates/ingress-grpc.yaml
# Ingress (HTTPS load balancer)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet-grpc-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: testnet-grpc-ip-addr
    networking.gke.io/managed-certificates: testnet-grpc-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: testnet-ingress-frontend-config
spec:
  defaultBackend:
    service:
      name: testnet
      port:
        number: 8080
